[C-1303][C-1304] Fix misc. profile layout issues (#2129)
* [C-1303] Improve popup display to try to stay in window

* [C-1304] Fix profile layout

--- a/apps/audius-client/packages/web/src/components/upload/UploadChip.module.css
+++ b/apps/audius-client/packages/web/src/components/upload/UploadChip.module.css
@@ -19,7 +19,7 @@
   color: var(--neutral-light-2);
 
   padding: 32px;
-  margin-top: 32px;
+  margin-top: 0px;
 }
 
 .uploadChip:hover {
