--- a/apps/audius-client/packages/web/src/pages/profile-page/components/desktop/ProfilePage.module.css
+++ b/apps/audius-client/packages/web/src/pages/profile-page/components/desktop/ProfilePage.module.css
@@ -219,7 +219,7 @@
 .tiles,
 .cards {
   width: 100%;
-  margin-top: 4px;
+  margin-top: 10px;
   min-height: 500px;
   padding: 0px 16px;
 }
